feat: Inicializando front-end com autenticação de usuário, interface de chat e impiortacao de CSVs